[gd_scene load_steps=2 format=3 uid="uid://dp8qyy5atmqri"]

[ext_resource type="Script" path="res://addons/PlanetEditor/subeditors/label_input_slider.gd" id="1_3jkji"]

[node name="LabelInputSlider" type="HFlowContainer"]
offset_right = 81.0
offset_bottom = 28.0
script = ExtResource("1_3jkji")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(64, 28)
layout_mode = 2
text = "0"
caret_blink = true
caret_blink_interval = 0.5

[node name="Slider" type="HSlider" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1

[connection signal="focus_exited" from="LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
